review: fixed spacing, color, text style

--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -7,5 +7,10 @@
 
 #reviews-title small{
   font-family: 'Poppins', sans-serif;
+  font-weight: 600;
   color:#666;
+}
+
+.reviews{
+  padding-top:80px;
 }
